# learning_notes

./: .gitignore  D-bus.md  README.md  ShellRegEx.md  cairo.md  cmake.md  command.md  debian.md  docker.md  git.md  gnome-HowDoI.md  mermaid.md  meson.md  mount.md  tmp.md  window-bat.md  yocto.md
audio/: fftw.c
blog/:  lib的ld错误问题.md  D-bus学习整理记录.md  Docker简介.pptx  WSL.pptx  conntrack.md  dbg-vscode-adb-gdb-wsl-debug.md  dbg-内存异常调试方法.md  gRPC-notes.md  gnome下标题栏样式的统一整理记录.md  install_linux_in_wsl2_with_proxy_on_win11.md  kbuild.md  lib的ld错误问题.md  metapackage的形成.md  net-network_command.md  net-无线热点AP.md  network_command.md  os-使用 live-build 定制ubuntu livecd并修改iso.md  sys-systemd.md  sys-在x86_64平台为RK3566构建rootfs.md  systemd.md  test-love.html  test-love2.html  tmp-factory_test_api.sh  vscode-adb-gdb-wsl-debug.md  使用 live-build 定制ubuntu livecd并修改iso.md  内存异常调试方法.md  在x86_64平台为RK3566构建rootfs.md  如何在amd平台上跑arm64的docker.md  无线热点AP.md  转-语谱图（一） Spectrogram 的定义与机理.md
deb包的构建与发布/:  密钥的发布与获取.md  debian.md  使用apt-mirror镜像仓库到本地.md  构建自己的软件仓库.md
docker/: Build Your Own Docker with Linux Namespaces, cgroups, and chroot: Hands-on Guide | Akash Rajpurohit.md  Docker on WSL2 without Docker Desktop.md  DockerOnWSL2WithoutDockerDesktop.md  docker.md  如何在amd平台上跑arm64的docker.md
ecall/: 16072.md  17240.md
gtk/: Event.md  GObject.md  Widget.md  expander.md  help-doc.md  image.md  inspector.md  label.md  log.md  menu.md  polkit.md  signal_connect.md  software.md  sound.md  stylesheet.md  window.md
kernel/: debug.md  devicetree.md
linux-coding-c/: .clang-format  debug_alloc.h  test-autofree-pointer.c  test-execute-shell.c  test-file.c  test-netlink.c  test-recv.c  test-retry-do-something.c  test-tcp.c  test-timeout-fgets.c  test-url-decode.c
linux-coding-c/config/: CMakeLists.txt  config.c  config.h  main.c
linux-coding-c/config/lib/: jsonconfig.c  jsonconfig.h
linux-coding-c/log/: CMakeLists.txt
linux-coding-c/log/include/: common.h  log.h  log_out.h  parse_cmdline.h  pipe.h
linux-coding-c/log/src/: log.c  log_file.c  log_service.c  logcat.c  main.c  parse_cmdline.c  pipe.c  signals.c
linux-coding-c/log/utils/: util.c
linux-coding-c/simple_queue/: simple_queue.c  simple_queue.h
linux-coding-c/state_machine/: Makefile  README.md
linux-coding-c/state_machine/src/: light_state_id.h  light_state_list.h  main.c  state_common.h  state_machine.c  state_machine.h  state_off.c  state_off.h  state_on.c  state_on.h
linux-coding-c/test-canfd/: CMakeLists.txt  avl_tree.c  main.c
linux-coding-c/test-canfd/include/: avl_tree.h  cJSON.h  can_tool.h  canfd_collect.h  canfd_log.h  canfd_packet.h  canfd_parse.h  canfd_signal.h
linux-coding-c/test-canfd/json/: CanData.json
linux-coding-c/test-canfd/src/: cJSON.c  can_tool.c  canfd_collect.c  canfd_packet.c  canfd_parse.c  canfd_signal.c
openwrt/: Summary.md  patch.md
qt/: qt-notes.md
qt/timer/: highprecisiontimer.cpp  highprecisiontimer.h  readme.md  timer.pri
qualconn/: QXDM.md  mobile_network.md
scprit/: myrun
script/: ag35-build.sh  append_data_in_script_tail.sh  arm_update_deb.sh  codeserver.sh  common.sh  dbus.sh  elementary_clone.sh  exit_flag_from.sh  log-block-rotate-save.sh  mk-image.sh  mydocker.sh  myrun  myrun_in_jide  qos-htb.sh  qxdm_log.sh  smart-gateway.sh  ti-gpio.sh  update-pkgconfig.sh
script/ppa/: patapua_build.sh  patapua_build_sync_remote.sh  patapua_daily_2_stable.sh  patapua_ports_build.sh  patapua_ports_build_sync_remote.sh
vala/: async_mutex.md  dbus.md  debug.md  design-patterns.md  function.md  vala-learning-notes.md  xml.md
vala/demos/: meson.build
vala/demos/demo_args/: main_args.vala  meson.build
vala/demos/demo_dbus/: main_dbus.vala  meson.build
vala/demos/demo_drag_and_drop/: main_dnd.vala  meson.build
vala/demos/demo_regex/: main_regex.vala  meson.build
vscode/: build.sh  clang-format.md  codeserver.sh  launch.json  tasks.json  vscode.md
yocto/: bitbake.md  yocto.md
日志/: month-12.md  ti-am62x开发日志.md
